--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
       - name: Install golang-lint 
-        run: go get github.com/golangci/golangci-lint/cmd/golangci-lint
+        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
       - name: Build
         run: cd module && golangci-lint run -c .golangci.yml --disable-all --timeout=3m && go mod verify
 
